Revision history for Zotero

{{$NEXT}}

0.05  2015-09-29 13:47:32 CEST
    - requires 'Catmandu', '>=0.9,!=0.9402,!=0.9401';

0.04  2015-09-29 10:17:47 CEST
	- Require 0.9403 or better to fix overloaded 'sort' method
	
0.03  2015-09-28 15:55:19 CEST
    - Removed wrong test dependency
    - Extended documentation
    - Added new option collectionID

0.02  2015-09-25 11:16:23 CEST
	- Fixed test dependency errors
	
0.01  2015-09-24 15:44:19 CEST
    - Initial version