@@ -1,7 +1,9 @@
 Revision history for Zotero
 
 {{$NEXT}}
-
+    - Adding support for reading record attachments
+    - Adding an example Fix file to map Zotero to MARC
+    
 0.05  2015-09-29 13:47:32 CEST
     - requires 'Catmandu', '>=0.9,!=0.9402,!=0.9401';
 
